# minichat

./: .dockerignore  README.md  compose.yml  setup.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml
protobuf/: authorization.proto  channels.proto  config.proto  scalar.proto  status.proto  users.proto
resources/: system.drawio
services/api/: Dockerfile  main.py  requirements.txt  setup.cfg
services/api-proxy/: Dockerfile  nginx.conf
services/api/scripts/: compile.sh  install.sh
services/api/src/: main.py
services/api/src/core/: __init__.py  cli.py  config.py  rabbitmq.py  rpc.py  utils.py
services/api/src/endpoints/: __init__.py  auth.py  authorization.py  channels.py
services/api/src/models/: __init__.py  adapters.py  authorization.py  channels.py  status.py  users.py
services/data/: Cargo.toml  Dockerfile  build.rs
services/data/scripts/: database.cql
services/data/src/: main.rs
services/data/src/services/: account.rs  authorization.rs  channel.rs  config.rs  mod.rs
services/frontend/: Dockerfile  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
services/frontend/src/: main.ts
services/frontend/src/api/: channels.ts  client.ts  snowflake.ts  status.ts  users.ts  utils.ts
services/frontend/src/assets/: main.css
services/frontend/src/components/: ChannelListBar.vue  ChannelTile.vue  MessageTile.vue  TheWelcome.vue
services/frontend/src/router/: index.ts
services/frontend/src/views/: ChannelView.vue  (+1 more)
