[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.39"
prost = "0.13.4"
rand = "0.9.0"
scylla = "0.15.1"
serde = { version = "1.0.217", features = ["std", "derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["server"] }

[build-dependencies]
tonic-build = "0.12.3"
