[package]
name = "data-service"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
lapin = "2.5.0"
prost = "0.13.5"
rand = "0.9.0"
scylla = "0.15.1"
serde = { version = "1.0.219", features = ["std", "derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
tonic = { version = "0.12.3", features = ["server"] }

[build-dependencies]
tonic-build = "0.12.3"
